# ski-jumping-hill-generator

./: CMakeLists.txt  README.md  hill.cpp  hill.hpp  hill.xml  hill_mesh.cpp  hill_mesh.hpp  hill_xml.cpp  hill_xml.hpp  hills_map.cpp  hills_map.hpp  main  main.cpp  mesh.cpp  mesh.hpp  obj_exporter.cpp  obj_exporter.hpp  osj_math.cpp  osj_math.hpp
examples/: hill.xml  hills.xsd
hills/: hill.cpp  hill.hpp  hill_mesh.cpp  hill_mesh.hpp
math/: math_utils.hpp  quaternion.cpp  quaternion.hpp  transform.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
